flexsdk/modules/asc/test/compiler/as3/LocalizedErrors/1076-ExpectingLeftParenthesis.as
/*
1076	Expecting left parenthesis before the identifier.
*/
function f() {
    for i = 0;;) {}
}    